<resources>
    <string name="title_activity_scrolling">تحریریه من</string>
    <string name="title_activity_post_view">تحریریه من</string>
    <string name="app_name">تحریریه من</string>
    <string name="action_settings">تنظیمات</string>
    <string name="loading_feeds">در حال دریافت اطلاعات</string>
    <string name="cancel"> بستن</string>
    <string name="feed_title">عنوان مطلب</string>
    <string name="source">منابع</string>
    <string name="source_name">نام منبع</string>
    <string name="feed_url">آدرس منبع</string>
    <string name="save">ذخیره</string>
    <string name="add_feed_title">صفحه اصلی</string>
    <string name="add_feed">اضافه کردن منبع جدید</string>
    <string name="roboto_light">sans-serif-light</string>
    <string name="roboto_condensed">sans-serif-condensed</string>
    <string name="roboto">sans-serif</string>
    <string name="roboto_medium">sans-serif-medium</string>
    <string name="monospace">monospace</string>
    <string name="category">دسته بندی ها</string>
    <string name="add_category">اضافه کردن دسته بندی</string>
    <string name="source_url">آدرس منبع</string>
    <string name="pub_date">تاریخ درج</string>
    <string name="clear_feeds">حذف کلیه موضوعات</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string-array name="category_names">
        <item>خبری</item>
        <item>ورزشی</item>
        <item>بازی</item>
        <item>تکنولوژی</item>
        <item>آموزشی</item>
        <item>نرم افزار</item>
        <item>سخت افزار</item>
        <item>هک و امنیت</item>
        <item>رویداد ها</item>
        <item>شخصیت ها</item>
        <item>متفرقه</item>
        
    </string-array>
    <string name="menu_exit">خروج</string>
    <string name="menu_about">درباره ما</string>
    <string name="menu_planets">سیاره ها</string>
    <string name="menu_main">صفحه اصلی</string>
    <string-array name="fan_labels">
        <item>@string/menu_exit</item>
        <item>@string/menu_about</item>
        <item>@string/menu_planets</item>
        <item>@string/menu_main</item>

    </string-array>
    <string-array name="category_drawables">
        <item>@drawable/icons8_news </item>
        <item>@drawable/icons8_gymnastics</item>
        <item>@drawable/icons8_steam</item>
        <item>@drawable/fiber_new_black_24x24 </item>
        <item>@drawable/icons8_e_learning </item>
        <item>@drawable/code_black_24x24 </item>
        <item>@drawable/icons8_processor </item>
        <item>@drawable/icons8_forgot_password</item>
        <item>@drawable/icons8_event</item>
        <item>@drawable/icons8_person</item>
        <item>@drawable/icons8_questionmark_24 </item>


        
    </string-array>
    <string-array name="sources_test">
        <item>تمام منابع</item>
        <item>Reuters</item>
        <item>BBC India</item>
    </string-array>
    <string-array name="feed_table_columns">
        <item>item_name</item>
        <item>item_desc</item>
        <item>item_link</item>
        <item>item_img_url</item>
        <item>item_category</item>
        <item>item_source</item>
        <item>item_source_url</item>
        <item>item_pub_date</item>
        <item>item_category_img_id</item>
        <item>item_desc_web</item>
    </string-array>
    <string-array name="source_table_columns">
        <item>source_name</item>
        <item>source_url</item>
        <item>source_category</item>
        <item>source_category_img_id</item>
    </string-array>
    <string-array name="article_table_columns">
        <item>article_name</item>
        <item>article_desc</item>
        <item>article_link</item>
        <item>article_img_url</item>
        <item>article_category</item>
        <item>article_source</item>
        <item>article_source_url</item>
        <item>article_pub_date</item>
        <item>article_category_img_id</item>
        <item>article_content</item>
    </string-array>
    <string name="title_activity_article">ArticleActivity</string>
    <string name="action_share">اشتراک گذاری</string>
    <string name="action_archive">آرشیو</string>
    <string name="content">مطلب</string>
    <string name="please_wait">لطفا صبر کنید</string>
    <string name="loading">درحال بارگذاری</string>
    <string name="nav_home">صفحه اصلی</string>
    <string name="nav_feeds">موضوعات</string>
    <string name="nav_manage_feeds">مدیریت موضوعات</string>
    <string name="nav_other">متفرقه</string>
    <string name="nav_extra"><i> تنظیمات برنامه</i></string>
    <string name="nav_settings">تنظیمات</string>
    <string name="nav_about">درباره ما</string>
    <string name="nav_archive">آرشیو</string>
    <string name="remove_archive">حذف از آرشیو</string>
    <string name="remove_archive_content">این موضوع برای همیشه از آرشیو شما حذف میشود.</string>
    <string name="remove">حذف</string>
    <string name="nav_manage_sources">مدیریت منابع</string>
    <string name="modify_source">تغیر منابع</string>
    <string name="modify">تغییر</string>
    <string name="delete">حذف</string>
    <string name="title_activity_settings">تنظیمات</string>
    <string name="sort">مرتب سازی</string>
    <string name="sort_feeds">مرتب سازی موضوعات</string>
    <string name="ok">انتخاب</string>
    <string-array name="sort_feeds_types">
        <item>تصادفی</item>
        <item>عنوان ها</item>
        <item>دسته بندی ها</item>
        <item>تاریخ درج</item>
    </string-array>
    <string name="perf_ui">تنظیمات شخصی</string>
    <string name="perf_feeds">منابع</string>
    <string name="perf_feeds_font_size">اندازه کلمات منابع</string>
    <string name="perf_feeds_font_size_desc">مدیریت اندازه ی کلمات منابع</string>
    <string name="perf_feeds_font_size_key">perf_feeds_font_size</string>
    <string-array name="perf_feeds_font_size_entries">
        <item>کوچک</item>
        <item>معمولی</item>
        <item>بزرگ</item>
    </string-array>
    <string-array name="perf_feeds_font_size_entry_values">

        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>
    <string name="perf_article">مطلب</string>
    <string name="perf_article_font_size">اندازه ی کلمات</string>
    <string name="perf_article_font_size_desc">مدیریت اندازه ی کلمات مطالب</string>
    <string name="perf_article_font_size_key">perf_article_font_size</string>
    <string-array name="perf_article_font_size_entries">
        <item>کوچک</item>
        <item>معمولی</item>
        <item>بزرگ</item>
    </string-array>
    <string-array name="perf_article_font_size_entry_values">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>
    <string name="perf_small">کوچک</string>
    <string name="perf_medium">معمولی</string>
    <string name="perf_large">بزرگ</string>
    <string name="perf_feeds_anim">فعال کردن انیمیشن بارگذاری مطالب</string>
    <string name="perf_feeds_anim_desc_disabled">با فعال سازی این قابلیت ممکن است دستگاه مطالب را با سرعت کم تری بارگذاری کند</string>
    <string name="perf_feeds_anim_desc_enabled">با غیر فعال سازی این قابلیت ممکن است دستگاه مطالب را با سرعت بیشتری بارگذاری نماید</string>
    <string name="perf_feeds_anim_key">perf_feeds_anim_key</string>
    <string name="perf_sources_anim">فعال سازی انیمیشن بارگذاری منابع</string>
    <string name="perf_sources_anim_desc_disabled">با فعال سازی این قابلیت ممکن است دستگاه مطالب را با سرعت کم تری بارگذاری کند</string>
    <string name="perf_sources_anim_desc_enabled">با غیر فعال سازی این قابلیت ممکن است دستگاه مطالب را با سرعت بیشتری بارگذاری نماید</string>
    <string name="perf_sources_anim_key">perf_sources_anim_key</string>
    <string name="perf_circular_reveal">فعال سازی انیمیشن درج منابع</string>
    <string name="perf_circular_reveal_desc_disabled">با فعال سازی این قابلیت ممکن است دستگاه مطالب را با سرعت کم تری بارگذاری کند</string>
    <string name="perf_circular_reveal_desc_enabled">با غیر فعال سازی این قابلیت ممکن است دستگاه مطالب را با سرعت بیشتری بارگذاری نماید</string>
    <string name="perf_circular_reveal_key">perf_circular_reveal_key</string>
    <string name="perf_curated_feeds">موضوعات جاری</string>
    <string name="perf_curated_feeds_import">فراخوانی منابع</string>
    <string name="perf_curated_feeds_import_desc">فراخوانی منابع متداول</string>
    <string name="perf_curated_feeds_import_key">perf_curated_feeds_import_key</string>
    <string-array name="perf_curated_feeds_import_empty" />
    <string name="perf_curated_feeds_submit">ثبت منبع</string>
    <string name="perf_curated_feeds_submit_desc">ذخیره یا به اشتراک گذاری منابع با دیگران</string>
    <string name="perf_curated_feeds_submit_key">perf_curated_feeds_submit_key</string>
    <string-array name="perf_curated_feeds_submit_empty" />
    <string name="perf_theme">مدیریت پوسته</string>
    <string name="perf_theme_desc">تغییر پوسته برنامه</string>
    <string name="perf_theme_key">perf_theme</string>
    <string name="perf_theme_default_value">Light</string>
    <string-array name="perf_theme_entries">
        <item>حالت روز</item>
        <item>حالت شب</item>
    </string-array>
    <string-array name="perf_theme_values">
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string name="perf_in_app_browser">فعال سازی مرورگر داخل برنامه</string>
    <string name="perf_in_app_browser_desc_enabled">با فعال سازی از مرورگر استاندارد برنامه استفاده خواهد شد</string>
    <string name="perf_in_app_browser_desc_disabled">با غیر فعال سازی از مرورگر گوشی شما استفاده خواهد شد (نیاز به chrome +45)</string>
    <string name="perf_in_app_browser_key">perf_in_app_browser_key</string>
    <string name="perf_import_opml">فراخوانی فایل های opml</string>
    <string name="perf_import_opml_desc">بارگذاری منابع جدید</string>
    <string name="perf_import_opml_key">perf_import_opml_files</string>
    <string name="perf_import_opml_default_value">Light</string>
    <string-array name="perf_import_opml_entries">
        <item>از کدام آدرس</item>
        <item>از کدام فایل</item>
    </string-array>
    <string-array name="perf_import_opml_values">
        <item>From url</item>
        <item>From file</item>
    </string-array>
    <string name="perf_cache">فعال سازی حافظه موقت برنامه</string>
    <string name="perf_cache_desc_enabled">با فعال سازی این قابلیت برنامه مطالب را از بانک اطلاعاتی خود خواهد خواند</string>
    <string name="perf_cache_desc_disabled">با غیر فعال سازی برنامه اطلاعات را از اینترنت به صورت بر خط خواهد خواند</string>
    <string name="perf_cache_key">perf_feeds_cache</string>
    <string name="perf_system">سیستمی</string>
    <string name="perf_reset_db">راه اندازی مجدد پایگاه داده</string>
    <string name="perf_reset_db_desc">بازگشت به حالت اولیه</string>
    <string name="perf_reset_db_message">باعث از دست رفتن موضوعات و منابع خواهد شد</string>
    <string name="perf_misc">عیب یابی برنامه</string>
    <string name="perf_feeds_not_working">منابع من کار نمیکند</string>
    <string name="perf_feeds_not_working_desc">اگر منابعی که به برنامه وارد میکنید درست کار نمیکند به اینجا ضربه بزنید</string>
    <string name="perf_feeds_not_working_key">perf_feeds_not_working_key</string>
    <string name="swipe_down">به سمت پایین بکشید</string>
    <string name="archive_empty">آرشیو خالی است</string>
    <string name="action_open_in_browser">باز شدن داخل مرورگر</string>
    <string name="refresh">بارگذاری مجدد</string>
    <string name="no_internet_available">اینترنت موجود نیست</string>
    <string name="no_internet_available_extnd">من نمیتوانم اطلاعاتی دریافت کنم لطفا اینترنت دستگاه خود را بررسی کنید</string>
    <string name="settings">تنظیمات</string>
    <string name="dismiss">بستن</string>
    <string name="clear_feeds_desc">موضوعات پاک خواهد شد ولی جای نگرانی نیست چون در آرشیو شما است</string>
    <string name="clear">تمیز کاری</string>
</resources>