<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.rezaduty.chdev.ks.nta.ui.activities.ArticleActivity">
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="1"
        android:title="@string/refresh"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_open_in_browser"
        android:orderInCategory="2"
        android:title="@string/action_open_in_browser"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_share"
        android:orderInCategory="3"
        android:title="@string/action_share"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="4"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />
</menu>
